--- a/config/install/migrate_plus.migration.pages_content.yml
+++ b/config/install/migrate_plus.migration.pages_content.yml
@@ -31,6 +31,30 @@ source:
       name: page_body
       label: 'Page Body'
       selector: body
+    -
+      name: city
+      label: 'City'
+      selector: city
+    -
+      name: state
+      label: 'State'
+      selector: state
+    -
+      name: site_url
+      label: 'Site URL'
+      selector: site_url
+    -
+      name: site_name
+      label: 'Site Name'
+      selector: site_name
+    -
+      name: keywords
+      label: 'Keywords'
+      selector: keywords
+    -
+      name: date_created
+      label: 'Date Created'
+      selector: date_created
   # Under 'ids', we identify source fields populated above which will uniquely
   # identify each imported item.
   ids:
@@ -42,9 +66,34 @@ process:
   'body/format':
     plugin: default_value
     default_value: basic_html
+  field_place:
+    plugin: concat
+    delimiter: -
+    source:
+      - city
+      - state
+  'field_url/uri': site_url
+  'field_url/title': site_name
+  field_tags:
+    -
+      plugin: explode
+      source: keywords
+      delimiter: ,
+    -
+      plugin: entity_generate
+  created:
+    plugin: callback
+    callable: strtotime
+    source: date_created
   type:
     plugin: default_value
     default_value: page
+  uid:
+    plugin: default_value
+    default_value: 1
+  status:
+    plugin: default_value
+    default_value: 1
 destination:
   plugin: entity:node
 migration_dependencies: {}
