update des infos avec le mot stage
on met le mot stage un peu partout

--- a/migrate_xml_d8_custom.info.yml
+++ b/migrate_xml_d8_custom.info.yml
@@ -1,7 +1,7 @@
-name: Migrate XML to D8 Custom
+name: Migrate XML to D8 Custom Stage
 type: module
 core: 8.x
-description: 'XML to Drupal 8 Custom Migration Module.'
+description: 'XML to Drupal 8 Custom Migration Module(version stage).'
 dependencies:
   - migrate_tools
   - migrate_plus
